Fix styling z-indexes and card positioning

--- a/style.css
+++ b/style.css
@@ -186,12 +186,12 @@ img {
 
 .bottom-left-card {
   position: absolute;
-  bottom: -50px;
+  bottom: 0;
   left: 0;
   width: 380px;
   height: 130px;
   display: flex;
-  z-index: 50;
+  z-index: 10;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
   overflow: hidden;
 }
@@ -285,7 +285,7 @@ img {
   height: 25px;
   background-color: #0c0c0c;
   clip-path: polygon(0 0, 100% 0, 85% 100%, 15% 100%);
-  z-index: 10;
+  z-index: 9;
 }
 
 .about-label {
